--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 18:05:04 2018</p>
+         Last Run: Thu Jul 26 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -36,32 +36,32 @@
                         <td>2</td>
                         <td>43</td>
                         <td>4</td>
-                        <td>8</td>
-                        <td>NW</td>
-                        <td>19</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>38</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>NE</td>
-                        <td>23</td>
+                        <td>ENE</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>35</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>17</td>
                      </tr>
                      <tr>
@@ -69,12 +69,12 @@
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>33</td>
                         <td>7</td>
                         <td>11</td>
                         <td>ENE</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>19</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -203,9 +203,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
+                 "2",
                  "3",
-                 "4",
-                 "3",
+                 "2",
                  "6"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "23",
+                 "21",
+                 "24",
                  "17",
-                 "17",
-                 "19"
+                 "18",
+                 "17"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 18:05:04 2018</p>
+         Last Run: Thu Jul 26 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,14 +269,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>33</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>49</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -284,11 +284,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>34</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>54</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -296,23 +296,23 @@
                         <td>22</td>
                         <td>22</td>
                         <td>35</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ENE</td>
-                        <td>63</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>45</td>
+                        <td>37</td>
                         <td>64</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NE</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -357,7 +357,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "24",
                  "23",
                  "22",
                  "20"
@@ -369,7 +369,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "24",
                  "23",
                  "22",
                  "20"
@@ -427,7 +427,7 @@
                  "33",
                  "34",
                  "35",
-                 "45"
+                 "37"
                ]
              },
              {
@@ -435,9 +435,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "52",
-                 "56",
+                 "48",
+                 "51",
+                 "55",
                  "64"
                ]
              },
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "54",
-                 "63",
-                 "68"
+                 "51",
+                 "56",
+                 "64",
+                 "69"
                ]
              }
            ]
