--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 09:05:04 2018</p>
+         Last Run: Fri Jul 27 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>4</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -46,35 +46,35 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>5</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>E</td>
-                        <td>17</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>0</td>
-                        <td>33</td>
+                        <td>2</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>0</td>
+                        <td>2</td>
                         <td>31</td>
                         <td>7</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>24</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>1</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>6</td>
-                        <td>8</td>
-                        <td>NE</td>
-                        <td>31</td>
+                        <td>10</td>
+                        <td>ENE</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -204,8 +204,8 @@
                "data":[
                  "0",
                  "0",
-                 "0",
-                 "0",
+                 "2",
+                 "2",
                  "1"
                ]
              },
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
-                 "36",
-                 "33",
+                 "40",
+                 "35",
+                 "32",
                  "31",
-                 "31"
+                 "30"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "17",
-                 "19",
-                 "24",
-                 "31"
+                 "10",
+                 "15",
+                 "20",
+                 "26",
+                 "33"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 09:05:04 2018</p>
+         Last Run: Fri Jul 27 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -274,9 +274,9 @@
                         <td>0</td>
                         <td>47</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>69</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -288,7 +288,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>63</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -446,8 +446,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "63",
+                 "70",
+                 "64",
                  "58",
                  "51"
                ]
