--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 11:05:04 2018</p>
+         Last Run: Fri Jul 27 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -49,7 +49,7 @@
                         <td>35</td>
                         <td>5</td>
                         <td>6</td>
-                        <td>ESE</td>
+                        <td>E</td>
                         <td>16</td>
                      </tr>
                      <tr>
@@ -58,7 +58,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>2</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>6</td>
                         <td>E</td>
@@ -72,13 +72,13 @@
                         <td>2</td>
                         <td>30</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>E</td>
                         <td>26</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
                         <td>1</td>
@@ -86,7 +86,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>31</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -216,7 +216,7 @@
                "data":[
                  "40",
                  "35",
-                 "31",
+                 "32",
                  "30",
                  "30"
                ]
@@ -230,7 +230,7 @@
                  "16",
                  "21",
                  "26",
-                 "31"
+                 "27"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 11:05:04 2018</p>
+         Last Run: Fri Jul 27 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -276,19 +276,19 @@
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
                         <td>49</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -300,7 +300,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -310,7 +310,7 @@
                         <td>3</td>
                         <td>60</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>E</td>
                         <td>51</td>
                      </tr>
@@ -358,7 +358,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "23",
-                 "22",
+                 "23",
                  "22",
                  "20"
                ]
@@ -370,7 +370,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "23",
-                 "22",
+                 "23",
                  "22",
                  "20"
                ]
@@ -446,9 +446,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "65",
-                 "59",
+                 "70",
+                 "64",
+                 "58",
                  "51"
                ]
              }
