--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 12:05:04 2018</p>
+         Last Run: Fri Jul 27 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -34,10 +34,10 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>4</td>
                         <td>6</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>10</td>
                      </tr>
                      <tr>
@@ -46,11 +46,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>5</td>
-                        <td>6</td>
-                        <td>E</td>
-                        <td>16</td>
+                        <td>8</td>
+                        <td>ESE</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -58,19 +58,19 @@
                         <td>24</td>
                         <td>24</td>
                         <td>2</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>2</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>8</td>
                         <td>E</td>
@@ -79,13 +79,13 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>1</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>ENE</td>
+                        <td>E</td>
                         <td>27</td>
                      </tr>
                   </tbody>
@@ -135,8 +135,8 @@
                  "22",
                  "23",
                  "24",
-                 "25",
-                 "25"
+                 "24",
+                 "24"
                ]
              },
              {
@@ -148,8 +148,8 @@
                  "22",
                  "23",
                  "24",
-                 "25",
-                 "25"
+                 "24",
+                 "24"
                ]
              }
            ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "40",
-                 "35",
-                 "32",
-                 "30",
-                 "30"
+                 "41",
+                 "36",
+                 "33",
+                 "31",
+                 "31"
                ]
              },
              {
@@ -227,8 +227,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "10",
-                 "16",
-                 "21",
+                 "15",
+                 "20",
                  "26",
                  "27"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 27 12:05:04 2018</p>
+         Last Run: Fri Jul 27 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -268,27 +268,27 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>51</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>70</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>Partly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>64</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -296,23 +296,23 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>58</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>3</td>
-                        <td>60</td>
+                        <td>2</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -358,7 +358,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "23",
-                 "23",
+                 "22",
                  "22",
                  "20"
                ]
@@ -370,7 +370,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "23",
-                 "23",
+                 "22",
                  "22",
                  "20"
                ]
@@ -427,7 +427,7 @@
                  "0",
                  "0",
                  "0",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -435,10 +435,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
-                 "49",
+                 "51",
                  "53",
-                 "60"
+                 "56",
+                 "63"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
-                 "64",
-                 "58",
-                 "51"
+                 "55",
+                 "54",
+                 "53",
+                 "52"
                ]
              }
            ]
